@@ -267,6 +267,7 @@ extern int         GetReinstallNode(install_info *info, xmlNodePtr node);
 extern int         GetProductIsAppBundle(install_info *info);
 extern int         GetProductSplashPosition(install_info *info);
 extern int         GetProductHasManPages(install_info *info);
+extern int         GetProductUseFork(install_info *info);
 extern const char *GetProductCDKey(install_info *info);
 extern const char *GetProductPostInstallMsg(install_info *info);
 /** whether the user should be prompted when files already exist */
