@@ -1,5 +1,7 @@
 Current:
-Stephane Peter (Codehost) = Thu Mar  9 11:09:13 PST 2006
+Stephane Peter (Codehost) - Wed Mar 15 12:39:34 PST 2006
+ * Make fork on binary start optional, through root "fork" attribute.
+Stephane Peter (Codehost) - Thu Mar  9 11:09:13 PST 2006
  * Allow reverse matching on distro, arch and glibc tags with ! prefix.
 Stephane Peter (Codehost) - Mon Mar  6 18:00:40 PST 2006
  * Added support for SELinux context attributes for files
